# ImageMagick

./: .auto-changelog  .editorconfig  .gitattributes  .gitignore  .travis.yml  AUTHORS.txt  AppRun  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog.md  ImageMagick.spec  ImageMagick.spec.in  Install-OpenHarmony.txt  Install-mac.txt  Install-unix.txt  Install-vms.txt  Install-windows.txt  LICENSE  Magickshr.opt  Magik  Make.com  Makefile.am  Makefile.in  NEWS.txt  NOTICE  Platforms.txt  QuickStart.txt  README.CMake.md  README.md  README.txt  SECURITY.md  aclocal.m4  azure-pipelines.yml  bench_metal_vs_opencl.sh  benchmark_metal.sh  clang.profile  cmake_build.sh  common.shi.in  (+19 more)
Magick++/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README  drawing-primitives.txt
MagickCore/: CMakeLists.txt  ImageMagick.h  ImageMagick.pc  ImageMagick.pc.in  Magick-config  MagickCore-config.1  MagickCore-config.in  MagickCore.h  MagickCore.pc.in  Make.com  Makefile.am  PreRvIcccm.c  PreRvIcccm.h  accelerate-kernels-metal.h  accelerate-kernels-private.h  accelerate-metal.c  accelerate-private.h  accelerate.c  accelerate.h  animate-private.h  animate.c  animate.h  annotate-private.h  annotate.c  annotate.h  api.h  artifact.c  artifact.h  attribute.c  attribute.h  blob-private.h  blob.c  blob.h  cache-private.h  cache-view.c  cache-view.h  cache.c  cache.h  channel.c  channel.h  (+251 more)
MagickWand/: CMakeLists.txt  ChangeLog  MagickWand-config.1  MagickWand-config.in  MagickWand.h  MagickWand.pc.in  Makefile.am  Wand.pc.in  animate.c  animate.h  compare.c  compare.h  composite.c  composite.h  conjure.c  conjure.h  convert.c  convert.h  deprecate.c  deprecate.h  display.c  display.h  drawing-wand.c  drawing-wand.h  drawtest.c  drawtest.sh  drawtest.tap  identify.c  identify.h  import.c  import.h  input_bilevel.miff  libMagickWand.map  magick-cli-private.h  magick-cli.c  magick-cli.h  magick-image.c  magick-image.h  magick-property.c  magick-property.h  (+34 more)
PerlMagick/: Changelog  MANIFEST  MANIFEST.SKIP  Magick.pm  Magick.pm.in  Magick.xs  Makefile.PL  Makefile.PL.in  Makefile.am  Makefile.nt  README.txt  check.sh  check.sh.in  typemap
coders/: CMakeLists.txt  Make.com  Makefile.am  aai.c  aai.h  amigaicon.c  amigaicon.h  apng.c  apng.h  art.c  art.h  ashlar.c  ashlar.h  avi.c  avs.c  avs.h  bayer.c  bayer.h  bgr.c  bgr.h  bmp.c  bmp.h  braille.c  braille.h  byte-buffer-private.h  bytebuffer-private.h  cals.c  cals.h  caption.c  caption.h  cin.c  cin.h  cip.c  cip.h  clip.c  clip.h  clipboard.c  clipboard.h  cmyk.c  cmyk.h  (+273 more)
config/: CMakeLists.txt  ImageMagick.rc  ImageMagick.rc.cmake  ImageMagick.rdf  ImageMagick.rdf.in  ImageMagickConfig.cmake.in  Magick++.dox.in  MagickCore.dox.in  MagickWand.dox.in  Makefile.am  README.txt  Translation.md  ar-lib  coder.xml  colors.xml  commit  compile  config.guess  config.h.cmake  config.h.in  config.sub  configure.xml  configure.xml.in  delegates.xml  delegates.xml.in  depcomp  english.xml  francais.xml  install-sh  limited-policy.xml  lndir.sh  locale.md  log.xml  ltmain.sh  magic.xml  mime.xml  missing  mkinstalldirs  open-policy.xml  policy-limited.xml  (+26 more)
filters/: CMakeLists.txt  Makefile.am  analyze.c  boost.c  convolve.c
m4/: Makefile.am  ac_compile_warnings.m4  ac_func_fseeko.m4  ac_prog_perl_version.m4  acx_pthread.m4  argz.m4  ax_append_flag.m4  ax_c___alloc_size__.m4  ax_c___attribute__.m4  ax_cflags_warn_all.m4  ax_check_cl.m4  ax_check_framework.m4  ax_compiler_vendor.m4  ax_cxx_bool.m4  ax_cxx_namespace_std.m4  ax_cxx_namespaces.m4  ax_gcc_archflag.m4  ax_gcc_x86_cpuid.m4  ax_have_opencl.m4  ax_lang_compiler_ms.m4  ax_opencl.m4  ax_prefix_config_h.m4  ax_prog_perl_version.m4  ax_pthread.m4  cxx_have_bool.m4  cxx_have_lstring.m4  cxx_have_namespaces.m4  cxx_have_std_libs.m4  cxx_have_std_namespace.m4  framework.m4  ld-version-script.m4  libtool.m4  ltdl.m4  ltversion.m4  magick_check_pthread_lib.m4  magick_func_mmap_fileio.m4  strerror_r.m4  version.m4
magick/: ImageMagick.h  ImageMagick.pc  ImageMagick.pc.in  ImageMagick.rc  Magick-config  Magick-config.1  Magick-config.in  MagickCore-config.1  MagickCore-config.in  MagickCore.h  MagickCore.pc.in  Make.com  Makefile.am  PreRvIcccm.c  PreRvIcccm.h  accelerate-kernels-private.h  accelerate-private.h  accelerate.c  accelerate.h  animate-private.h  animate.c  animate.h  annotate.c  annotate.h  api.h  artifact.c  artifact.h  attribute.c  attribute.h  blob-private.h  blob.c  blob.h  cache-private.h  cache-view.c  cache-view.h  cache.c  cache.h  channel.c  channel.h  cipher.c  (+217 more)
scripts/: Makefile.am  check_docs.sh  compare_signatures.py  format_c_api_docs  txt2html  xsnap
tests/: CMakeLists.txt  Makefile.am  cli-colorspace.tap  cli-heic.tap  cli-pcx-4bit.tap  cli-pipe.tap  cli-strict.tap  cli-svg.tap  common.sh  common.shi  common.shi.in  delegates.cpp  drawtest.c  drawtest.tap  input_256c.miff  input_gray.miff  sequence.miff  validate-colorspace.sh  validate-colorspace.tap  validate-compare.sh  validate-compare.tap  validate-composite.sh  validate-composite.tap  validate-convert.sh  validate-convert.tap  validate-formats-disk.tap  validate-formats-in-memory.sh  validate-formats-in-memory.tap  validate-formats-map.tap  validate-formats-memory.tap  validate-formats-on-disk.sh  validate-formats-on-disk.tap  validate-identify.sh  validate-identify.tap  validate-import.sh  validate-import.tap  validate-magick.tap  validate-montage.sh  validate-montage.tap  validate-pipe.sh  (+7 more)
utilities/: CMakeLists.txt  ImageMagick.1  ImageMagick.1.in  Makefile.am  animate.1  animate.1.in  animate.c  compare  compare.1  compare.1.in  compare.c  composite.1  composite.1.in  composite.c  conjure.1  conjure.1.in  conjure.c  convert.1  convert.1.in  convert.c  display.1  display.1.in  display.c  identify.1  identify.1.in  identify.c  import.1  import.1.in  import.c  magick-script.1  magick-script.1.in  magick.1  magick.1.in  magick.c  mogrify.1  mogrify.1.in  mogrify.c  montage.1  montage.1.in  montage.c  (+3 more)
wand/: ChangeLog  MagickWand-config.1  MagickWand-config.in  MagickWand.h  Makefile.am  (+66 more)
(+2361 files in other folders)
